phase-04-session-2026-06-11 | Done
